--- a/TTA_EJEMPLO_PR1/app/src/main/res/layout/activity_main.xml
+++ b/TTA_EJEMPLO_PR1/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,42 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="tta_ejemplo_pr1.intel.tta.ehu.eus.tta_ejemplo_pr1.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <GridLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:columnCount="2"
+        android:id="@+id/gridLayout">
+        <TextView
+            android:text="@string/username_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/username_placeholder"/>
+
+        <TextView
+            android:text="@string/passwd_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/passwd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/passwd_placeholder"
+            android:inputType="textPassword"/>
+    </GridLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button1_label"
+        android:onClick="login"
+        android:layout_below="@+id/gridLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
