--- a/TTA_EJEMPLO_PR1/app/src/main/res/layout/activity_menu.xml
+++ b/TTA_EJEMPLO_PR1/app/src/main/res/layout/activity_menu.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:id="@+id/menu_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20dp"
-        android:text="@string/Username_menu"/>
+        android:textSize="20dp"/>
 
     <TextView
         android:id="@+id/menu_login2"
