Practica 2: primera parte terminada. Añadido diferentes tipos de ayuda multimedia al test.

--- a/TTA_EJEMPLO_PR1/app/src/main/res/layout/activity_test.xml
+++ b/TTA_EJEMPLO_PR1/app/src/main/res/layout/activity_test.xml
@@ -15,8 +15,7 @@
         android:id="@+id/test_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:text="@string/test_text"/>
+        android:textSize="15dp"/>
 
     <RadioGroup
         android:id="@+id/test_choices"
