--- a/Ejemplo/app/src/main/res/layout/activity_main.xml
+++ b/Ejemplo/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/button1_label"
-        android:onClick="login"
+        android:onClick="authentication"
         android:layout_below="@+id/gridLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
