Clase Exercise añadida y método de recoger exercise de servidor añadido

--- a/Ejemplo/app/src/main/res/layout/activity_exercise.xml
+++ b/Ejemplo/app/src/main/res/layout/activity_exercise.xml
@@ -13,8 +13,7 @@
         android:id="@+id/exercise_wording"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:text="@string/exercise_text"/>
+        android:textSize="15dp" />
 
     <Button
         android:layout_width="match_parent"
